--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^5.4.3",
     "@types/popper.js": "^1.11.0",
+    "axios": "^0.26.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
